[Aryan] Add: Did some improvements in UI

--- a/pages/empRegister.html
+++ b/pages/empRegister.html
@@ -182,7 +182,7 @@
 
                 <div class="emp-reg-buttons-div">
 
-                    <button type="button" class="emp-reg-button">Cancel</button>
+                    <button type="button" class="emp-reg-button" id = "cancel-btn">Cancel</button>
 
                     <div>
                     <button type="submit" class="emp-reg-button" id="emp-reg-submit-button">Submit</button>
